syntax = "proto3";

package ledger.middleware.withdraw.coupon.v2;

option go_package = "github.com/NpoolPlatform/kunman/message/ledger/middleware/v2/withdraw/coupon";

import "basetypes/v1/conds.proto";
import "basetypes/ledger/v1/enums.proto";

message CouponWithdrawReq {
  optional uint32 ID = 10;
  optional string EntID = 11;
  optional string AppID = 20;
  optional string UserID = 30;
  optional string CoinTypeID = 40;
  optional string Amount = 50;
  optional basetypes.ledger.v1.WithdrawState State = 60;
  optional string AllocatedID = 70;
  optional string ReviewID = 80;
}

message CouponWithdraw {
  // @inject_tag: sql:"id"
  uint32 ID = 10;
  // @inject_tag: sql:"ent_id"
  string EntID = 11;
  // @inject_tag: sql:"app_id"
  string AppID = 20;
  // @inject_tag: sql:"user_id"
  string UserID = 30;
  // @inject_tag: sql:"coin_type_id"
  string CoinTypeID = 50;
  // @inject_tag: sql:"amount"
  string Amount = 60;
  // @inject_tag: sql:"state"
  string StateStr = 70;
  basetypes.ledger.v1.WithdrawState State = 80;
  // @inject_tag: sql:"allocated_id"
  string AllocatedID = 90;
  // @inject_tag: sql:"review_id"
  string ReviewID = 100;
  // @inject_tag: sql:"created_at"
  uint32 CreatedAt = 1000;
  // @inject_tag: sql:"updated_at"
  uint32 UpdatedAt = 1010;
}

message Conds {
  optional basetypes.v1.StringVal ID = 10;
  optional basetypes.v1.StringVal AppID = 20;
  optional basetypes.v1.StringVal UserID = 30;
  optional basetypes.v1.Uint32Val State = 40;
  optional basetypes.v1.StringVal CoinTypeID = 50;
  optional basetypes.v1.StringVal ReviewID = 60;
  optional basetypes.v1.StringVal AllocatedID = 70;
  optional basetypes.v1.Uint32Val CreatedAt = 80;
}

